--- a/client/src/css/components/_navigationInfo.scss
+++ b/client/src/css/components/_navigationInfo.scss
@@ -24,6 +24,8 @@
     justify-content: center;
     flex-wrap: wrap;
     padding: 15px 0 0 0;
+    height: 100%;
+    overflow-y: auto;
 }
 .list-group{
     flex: 1;
