--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -60,7 +60,7 @@ ul{
     overflow-x: hidden;
     overflow-y: auto;
     display: grid;
-    grid-template-rows: min-content 1fr;
+    grid-template-rows: [navigation] min-content [content] minmax(60%, auto);
     border-bottom: 1px solid #dee2e6;;
 }
 .yearLocation-label{
@@ -93,13 +93,22 @@ form{
     color: rgb(165, 165, 165);
     margin: 0;
 }
-//BOOTSTRAP TABS
+//BOOTSTRAP TABS_______________________________________________
+.Tabs-container{
+    display: grid;
+    grid-template-rows: min-content 1fr;
+    height: 100%;
+}
 .tab-pane{
     padding-top: 3px;
+    height: 100%;
 }
 .card-header-tabs{
     margin-top: 10px;
 }
+// .nav{
+//     height: 45px;
+// }
 .nav-link{
     background-color: rgb(228, 228, 228);
     margin-right: 3px;
@@ -109,10 +118,88 @@ form{
     border-top: 0;
     border-bottom: 0;
     padding: 0 5px;
-    display: flex;
-    flex-direction: column;
+    overflow-y: hidden;
+    // .active{
+    //     display: grid;
+    //     grid-template-rows: min-content 1fr;
+    // }
+}
+Button{
+    margin: 0 !important;
 }
 //_________________________________________
+.FileUpload-container{
+    height: 100%;
+    overflow-y: auto;
+    display: grid;
+    grid-template-rows: min-content 1fr;
+}
+//___________________________________________________________________
+.FileInfo-container{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 100%;
+    border: 1px solid #afafaf;
+    .Tabs-container{
+        flex: 1;
+    }
+}
+.SingleFile-container{
+    height: initial;
+    width: initial;
+    margin: 10px;
+}
+.FileInfo-preview{
+    border-right: 1px solid #dee2e6;
+    margin-right: 3px;
+    width: 200px;
+    padding: 5px;
+    background-color: #dee2e6;
+    .imageBox__wrapper{
+    // .FileInfo-imageBox{
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        border: none;
+        .ImagesPreview--imageContainer{
+            flex: initial;
+            height: initial;
+            flex: initial;
+        }
+        img{
+            max-width: 100%;
+        }
+    }
+}
+//___________________________________________________________________
+.familyPicker{
+    position: relative;
+    border: 2px solid;
+    padding: 4px 0 0 0;
+}
+.familyPicker-reload{
+    border: 0;
+    position: absolute;
+    top: 7px;
+    right: 3px;
+    z-index: 2;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.themeSelector{
+    overflow-y: auto;
+    height: 100%;
+}
+.two-layer-grid{
+    display: grid;
+    grid-template-rows: min-content 1fr;
+}
+.three-layer-grid{
+    display: grid !important;
+    grid-template-rows: min-content 1fr min-content;
+}
 .addNew-container{
     margin: 2px;
     border: 2px solid;
@@ -144,6 +231,67 @@ form{
     justify-content:space-between;
     border: 1px solid black;
     margin: 2px 1px 0 1px;
+}
+.grid-wrapper{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, auto));
+    grid-gap: 4px;
+    width: 100%;
+    overflow-y: auto;
+}
+.EditDetailContainer{
+    height: 100%;
+    display: grid;
+    grid-template-rows: minmax(min-content, 50px) minmax(300px, min-content);
+    .themeSelector{
+        max-height: 50vh;
+    }
+    .accordion{
+        overflow: hidden;
+        height: 100%;
+        .card{
+            height: 100%;
+            overflow: hidden;
+            display: grid;
+            grid-template-rows: [button]min-content min-content;
+            .collapsing{
+                height: 0;
+                display: none;
+                transition: 0s all;
+            }
+            .collapse{
+                min-height: 0;
+                overflow-y: auto;
+            }
+        }
+    }
+}
+.EditDetailContainer{
+    height: 100%;
+    display: grid;
+    grid-template-rows: minmax(min-content, 50px) minmax(300px, min-content);
+    .themeSelector{
+        max-height: 50vh;
+    }
+    .accordion{
+        overflow: hidden;
+        height: 100%;
+        .card{
+            height: 100%;
+            overflow: hidden;
+            display: grid;
+            grid-template-rows: [button]min-content min-content;
+            .collapsing{
+                height: 0;
+                display: none;
+                transition: 0s all;
+            }
+            .collapse{
+                min-height: 0;
+                overflow-y: auto;
+            }
+        }
+    }
 }
 .create-createFamily{
     display: flex;
@@ -250,7 +398,7 @@ Button{
     text-decoration: none !important;
 }
 .card-body{
-    padding: 0 10px !important;
+    padding: 0 !important;
     background-color: white !important;
 }
 .TagsMenu-Card-Title{
@@ -281,15 +429,19 @@ textarea{
 }
 .FamilyList--familyName__text{
     color: white;
-    text-transform: uppercase;
+    font-size: 18px;
     margin: 0;
     padding: 0;
 }
 .FamilyList--main{
-    border: 5px solid !important;
+    border: 5px solid;
+    border-top: 0;
     padding: 0 !important;
     margin: 0;
     width: auto !important;
+    overflow: auto;
+    display: grid;
+    grid-template-rows: repeat(auto-fill, min-content);
 }
 .FamilyList--detail{
     display: flex;
@@ -306,30 +458,47 @@ textarea{
     border-left: 1px solid rgb(175, 175, 175);
 
 }
-.FamilyList--detail__image{
+.imageBox__wrapper{
     padding: 4px;
     width: 200px;
+    margin: 4px;
+    border: 1px solid rgb(136, 136, 136);
+    max-height: 300px;
+    display: flex;
+    flex-direction: column;
 }
-.FamilyList--detail__image__text{
+.imageBox__text{
     width: 100%;
     margin: 4px 0;
     font-size: 12px;
     padding: 4px;
     border-top: 1px solid black;
 }
+.serverFileUpdate-imageBox{
+    height: 100%;
+    margin: 0;
+    border: none;
+}
 .title{
     font-weight: 600;
 }
-.admin-seeAlso-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
+// .admin-seeAlso-container{
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: space-around;
+// }
 .FamilyList--submit-delete-container{
     flex: 1;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: flex-end;
+    margin-bottom: 10px;
+    padding: 0 15px;
+    button{
+        margin-bottom: 5px !important;
+        width: 100%;
+    }
 }
 h3{
     margin-bottom: calc(16px + 0.75vw);
@@ -372,15 +541,6 @@ h5{
     width: 50px;
     height: 40px;
     align-items: center;
-}
-.FamilyList--detail_update{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    height: 100%;
-    margin: 15px 0 0 0 ;
-    border: 1px solid #afafaf;
 }
 .Login-container{
     display: flex;
@@ -683,7 +843,8 @@ font-family: 'Times New Roman', Times, serif;
     transition: 0 opacity;
     z-index: 2;
     overflow: hidden;
-    max-height: 200px;
+    // max-height: 200px;
+    height: 120px;
     top: 0;
     text-indent: -100%;
     overflow: hidden;
@@ -1433,6 +1594,25 @@ font-family: 'Times New Roman', Times, serif;
   }
 //MEDIA QUERY MOBILE *************************************************************************************************************
 @media only screen and (max-width: 720px) {
+    .ServerFileUpdate-preview{
+        width: 100%;
+    }
+    .serverFileUpdate-imageBox{
+        flex-direction: initial;
+        height: 120px;
+        .imageBox__text{
+            width: auto;
+            border: 0;
+            flex: 2;
+        }
+        .ImagesPreview--imageContainer{
+            height: 100% !important;
+            flex: 1;
+            img{
+                height: 100%;
+            }
+        }
+    }
     .admin-nav{
         display:block;
     }
@@ -1444,7 +1624,7 @@ font-family: 'Times New Roman', Times, serif;
             }
         }
     }
-    .FamilyList--detail__image{
+    .imageBox__wrapper{
         width: 170px;
     }
     body{
