--- a/client/src/css/components/_imageInfo.scss
+++ b/client/src/css/components/_imageInfo.scss
@@ -18,16 +18,15 @@
     right: 0;
 }
 
-.themeSelector{
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
-}
+// .themeSelector{
+//     position: relative;
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: center;
+//     width: 100%;
+// }
 .dropdown-container{
     border: 1px solid;
-    margin: 2px;
     background-color: #f6f6f6;
     flex: 1;
 }
