--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -835,16 +835,6 @@ font-family: 'Times New Roman', Times, serif;
     top: 45px;
     left: 0;
 }
-.images-container{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border-left: $border-gutter;
-    border-right: $border-gutter;
-    border-top: $border-dark;
-    border-bottom: $border-light;
-    transition: 0.2s all;
-}
 
 .ImagesPreview--imageContainer{
     display: flex;
@@ -1029,282 +1019,12 @@ font-family: 'Times New Roman', Times, serif;
 .display-no{
     display: none;
 }
-
-.tagsMenu-Button{
-    display: flex !important;
-    // justify-content: space-between ;
-    width: 100%;
-    font-weight: 400 !important;
-    font-size: 16px !important;
-    font-family: 'Times New Roman', Times, serif;
-    color: rgb(102, 102, 102) !important;
-    // transform: scale(0.8, 0.7);
-}
-
-
-@keyframes move-right{
-    0% {
-        right: 100%;
-    }
-    100% {
-        right: 0;
-    }
-}
-.move-right{
-    animation-name: move-right;
-    animation-duration: 2s;
-    animation-timing-function: ease-out;
-    // animation-timing-function: steps(3, end);
-}
-@keyframes move-left{
-    0% {
-        left: 100%;
-    }
-    100% {
-        left: 0;
-    }
-}
-.move-left{
-    animation-name: move-left;
-    animation-duration: 0.2s;
-    animation-timing-function: ease-out;
-    // animation-timing-function: steps(3, end);
-}
-@keyframes foreground-shrink{
-    0% {
-        height: 100%;
-        width: 100%;
-    }
-    100% {
-        height: 0;
-        width: 100%;
-    }
-}
-.foreground-shrink{
-    // animation-name: foreground-shrink;
-    animation-duration: 0.2s;
-    animation-timing-function: ease-out;
-    // animation-timing-function: steps(3, end);
-    animation-fill-mode: forwards;
-}
-.ArtworkInfo-container{
-    position: absolute;
-    max-height: 100%;
-    z-index: 2;
-    transition: 0.4s all;
-    bottom: -100%;
-    background-color: $frame-color;
-    color: white;
-    // padding-left: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    // padding-bottom: 10px;
-    overflow-y: auto;
-    right: 0;
-
-    border-top: $border-dark;
-    // border-left: $border-dark;
-    overflow: hidden;
-    width: 100% !important;
-}
-.ArtworkInfo-wrapper{
-    width: 100%;
-    max-width: 600px;
-    // padding: 1vw 0;
-    padding: 10px 0px 20px 20px;
-}
-.ArtworkInfo-preview-container{
-    height: 75px;
-    z-index: 11;
-    cursor: pointer;
-    align-content: center;
-    align-items: center;
-    display: flex;
-}
-.ArtworkInfo-preview{
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.4;
-    transition: 0.4s all;
-    opacity: 1;
-}
-.ArtworkInfo-preview:hover{
-    transition: none;
-    opacity: 1;
-}
-.ArtworkInfo-seeAlso-container{
-    display: flex;
-    flex-wrap: wrap;
-    overflow-y: auto;
-    justify-content: space-between;
-    width: 100%;
-}
-.ArtworkInfo-container_seealso{
-    padding-right: 2vw;
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-}
-.SeeAlso-related_images{
-    display: flex;
-    flex-wrap: wrap;
-}
-.subtitle_seeAlso{
-    margin-bottom: 3px;
-    border-bottom: 1px solid;
-    opacity: 0.5;
-}
-.ArtworkInfo--descriptions{
-    margin: 1vw 2vw;
-    font-size: 14px;    
-}
-.ArtworkInfo--descriptions_instance{
-    text-indent: 15px;
-    margin-top: 10px;
-}
-.ArtworkInfo_artworkFamily{
-    font-size: 12px;
-    line-height: 16px;
-}
-.ArtworkInfo_artworkTitle{
-    font-size: 14px;
-}
-.ArtworkInfo_locationYear{
-    font-size: 12px;
-    // margin-top: 10px;
-}
-.Tags-item_wrapper{
-    display: flex;
-    flex-wrap: wrap;
-    // margin: 1vw 2vw;
-    // margin-top: 0;
-    margin: 20px;
-    justify-content: flex-end;
-    
-}
-.Tags-item_container{
-    border: 1px solid black;
-    padding: 3px;
-    margin: 2px 3px;
-    padding-top: 1px;
-    cursor: pointer;
-}
-.Tags-item_container:hover{
-    transform: scale(1.1);
-}
-.Tags-item_text{
-    font-size: 10px;
-    white-space: nowrap;
-}
-
-.info-up{
-    opacity: 1;
-    bottom: 0;
-
-}
-.info-down{
-    bottom: -100%;
-    cursor: default;
-}
-
-.full-height{
-    height: 100% !important;
-}
-.show-menu-desktop{
-    transform: translateX(-100%);
-    width: 0;
-}
-.enlarge-preview{
-    // object-fit: contain;
-    height: 100%;
-    width: 100%;
-}
-.about-container{
-    width: 100%;
-    position: relative;
-    display: flex;
-    border-bottom: 1px solid !important;
-    background-color: lime;
-    border-top: 1px solid;
-    cursor: pointer;
-}
-.about-image{
-    width: 50%;
-}
-.TagsMenu-close{
-    width: 100%;
-    position: sticky;
-    bottom: 0;
-}
-.dark-bg{
-    background-color: black;
-    display: flex;
-    align-items: center;
-}
-.white-font{
-    color: white !important;
-    font-weight: bold;
-    padding-left: 5px;
-    white-space: nowrap;
-}
-.halfSize{
-    max-width: 50%;
-    min-width: 45px;
-}
-.previewBubble{
-    height: 20px;
-    width: 20px;
-    border-radius: 999px;
-    margin: 5px;
-    flex: 1 1 15px;
-    cursor: pointer;
-    min-width: 20px;
-    max-width: 20px;
-    opacity: 0.8;
-    // background-color: rgb(192, 192, 192);
-    border: 2px solid black;
-}
-.previewBubble-filled{
-    background-color: lime;
-}
-.previewBubble-container{
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    // bottom: 2px;
-    z-index: 9999;
-    width: 100%;
-    bottom: 0;
-    border: 1px solid black;
-    background-color: white;
-    height: 40px;
-}
-.previewBubble-wrapper{
-    padding: 5px 0;
-    display: flex;
-    width: calc(100% - 80px);
-    position: absolute;
-    left: 0;
-    overflow-x: auto;
-}
 .clickable{
     cursor: pointer;
 }
 .noClick{
     border: 0;
     cursor: default;
-}
-.clear-all{
-    height: 50px;
-    text-transform: uppercase;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.show{
-    border-bottom: 0px !important;
-
 }
 // .Tags{
 //     border-top: 1px solid;
@@ -1320,32 +1040,6 @@ font-family: 'Times New Roman', Times, serif;
     bottom: 0;
     height: initial;
     width: 100%;
-}
-
-.controls{
-    position: absolute;
-    bottom: calc(100% + 1px);
-    display: flex;
-    right: 0;
-    border-top: 1px solid;
-    border-left: 1px solid;
-}
-.controls-button{
-    height: 40px;
-    width: 40px;
-    background-color: white;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // margin-left: 2px;
-}
-.controls-exitButton{
-    border-left: 1px solid;
-}
-.images-grid{
-    display: grid;
-    grid-template-columns: 1fr max-content;
 }
 
 //*****************************************
@@ -1426,22 +1120,16 @@ font-family: 'Times New Roman', Times, serif;
 #TagsMenu-listitems-container{
     display: none;
 }
-// .TagsMenu-listitems-ul{
-//     position: absolute;
-// }
 .TagsMenu-bottomButtons{
     display: flex;
 }
-.TagsMenu-category-title{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex: 1;
-    cursor: pointer;
-    width: 100%;
-}
-// .list-items, .subcategory{
-//     display: none;
+// .TagsMenu-category-title{
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: space-between;
+//     flex: 1;
+//     cursor: pointer;
+//     width: 100%;
 // }
 .scroll-down{
     transform: translateY(100%);
@@ -1449,17 +1137,10 @@ font-family: 'Times New Roman', Times, serif;
     border-top: none;
 }
 .scroll-down-listitem{
-    // height: auto;
-    // padding: 4px 24px;
     transform: translateY(100%);
     opacity: 1 !important;
 }
 .TagsMenu-about-contact{
-    // height: 50px;
-    // border: 3px solid blue;
-    // position: absolute;
-    // top: 100%;
-    // width: 100%;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -1534,76 +1215,6 @@ font-family: 'Times New Roman', Times, serif;
     right: 30px;
     overflow: visible;
 }
-.styledCheckbox-container{
-    display: block;
-    position: relative;
-    // padding-left: 27px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    user-select: none;
-    overflow: hidden;
-    margin-left: 3px !important;
-}
-.styledCheckbox-container_large{
-    padding-left: 27px;
-}
-.styledCheckbox-container_small{
-    padding-left: 18px;
-}
-.styledCheckbox-checkbox{
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-    right: 0;
-}
-.styleCheckbox-checkmark{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    border-left: 1px solid black;
-    background-color: rgba(0,0,0,.1);
-    // background-color: #eee;
-}
-.styledCheckbox-container input:checked ~ .styleCheckbox-checkmark {
-    background-color: rgba(0,0,0,.18);
-  }
-  .styleCheckbox-checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-  .styledCheckbox-container input:checked ~ .styleCheckbox-checkmark:after {
-    display: block;
-  }
-  .styledCheckbox-container_large .styleCheckbox-checkmark:after {
-    left: 6px;
-    top: 2px;
-    width: 5px;
-    height: 15px;
-    width: 15px;
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
-  .styledCheckbox-container_small .styleCheckbox-checkmark:after {
-    left: 4px;
-    top: 3px;
-    width: 5px;
-    height: 9px;
-    width: 9px;
-    border: solid rgb(0, 0, 0);
-    border-width: 0 2px 2px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
 //MEDIA QUERY MOBILE *************************************************************************************************************
 @media only screen and (max-width: 720px) {
     .ServerFileUpdate-preview{
@@ -1666,10 +1277,6 @@ font-family: 'Times New Roman', Times, serif;
     .app-container{
         height: 100%;
     }
-    .frontEndIndex-container{
-        grid-template-columns: 100%;
-        grid-template-rows: auto 1fr 40px;
-    }
     .TagsMenu-container{
         grid-row-start: 1;
         grid-row-end: 2;
@@ -1701,18 +1308,6 @@ font-family: 'Times New Roman', Times, serif;
         height: 33px;
         font-family: 'Arial', 'Helvetica', sans-serif;
         font-size: 12px;
-    }
-    .images-container{
-        grid-row-start: 2;
-        grid-row-end: 3;
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: max-content 1fr;
-        overflow: hidden;
-        border-left: 1px solid;
-        border-right: 1px solid;
-        border-top: 1px solid;
-        border-bottom: 0;
     }
     .imageSelect-container{
         grid-column-start: 1;
@@ -1849,11 +1444,6 @@ font-family: 'Times New Roman', Times, serif;
     .side-scroll .imageSelect-FilePreview{
         width: auto !important;
         z-index: 9999;
-    }
-
-    .images-container{
-        display: grid;
-        grid-template-rows: max-content 1fr;
     }
     .about-container{
         width: 50%;
