--- a/client/src/css/components/_navigationInfo.scss
+++ b/client/src/css/components/_navigationInfo.scss
@@ -53,7 +53,7 @@
     // white-space: nowrap;
 }
 .list-group-item{
-    display: flex;
+    display: flex !important;
 }
 .categories-input{
     width: 200px;
