--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -262,6 +262,9 @@ font-family: 'Times New Roman', Times, serif;
     border-left: $border-dark;
     transition: 0.2s transform, 0.2s width;
     transform: translateX(0);
+    *{
+        transition: 0s all !important;
+    }
 }
 .Nav-button{
     width: 4vw;
@@ -304,7 +307,7 @@ font-family: 'Times New Roman', Times, serif;
     transition: 0.2s all;
 }
 
-.ImagesPreview--imageContainer{
+.FilePreview--imageContainer{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -313,25 +316,23 @@ font-family: 'Times New Roman', Times, serif;
     transition: 0 opacity;
     z-index: 2;
     overflow: hidden;
-    max-height: 200px;
     position: sticky;
     top: 0;
     text-indent: -100%;
     overflow: hidden;
-    flex: 1 1 25%;
-    min-width: 90px;
+    flex: 1 1 19%;
+    min-width: 59px;
 }
-.ImagesPreview--imageContainer__empty{
+.FilePreview--imageContainer__empty{
     transition: 0.2s all;
     transition: 0 opacity;
     overflow: hidden;
-    max-height: 200px;
     position: sticky;
     top: 0;
     z-index: -9999;
     height: 0;
 }
-.ImagesPreview--imageContainer__empty > *{
+.FilePreview--imageContainer__empty > *{
     transform: translateY(200px) !important;
 }
 .enlargeContainer{
@@ -392,8 +393,6 @@ font-family: 'Times New Roman', Times, serif;
     align-self: flex-end;
     transform-origin: bottom;
     transform: translateY(0);
-    transition: 0.2s all;
-    max-height: 200px;
     cursor: pointer;
     width: 100%;
 }
@@ -451,7 +450,7 @@ font-family: 'Times New Roman', Times, serif;
     opacity: 0.2;
 }
 
-.ImagesPreview--imageContainer:hover{
+.FilePreview--imageContainer:hover{
     opacity: 1;
 }
 
@@ -935,6 +934,7 @@ font-family: 'Times New Roman', Times, serif;
 }
 
 .fade-out{
+    transition: 0.2s opacity !important;
     opacity: 0 !important;
     mix-blend-mode: luminosity;
 }
@@ -1074,6 +1074,9 @@ font-family: 'Times New Roman', Times, serif;
     .TagsMenu-category-title:hover *{
         color: black;
     }
+    *{
+        transition: 0s all !important;
+    }
     .TagsMenu-category-title:focus *{
         color: black;
     }
@@ -1093,7 +1096,6 @@ font-family: 'Times New Roman', Times, serif;
         color: black !important;
     }
     .menu-container{
-        position: absolute;
         right: 0;
         display: flex;
         height: 100%;
@@ -1115,15 +1117,18 @@ font-family: 'Times New Roman', Times, serif;
         border-left: 1px solid;
     }
     .previewBubble-container{
+        position: relative;
+        grid-row-start: 2;
         border: 1px solid black;
         bottom: 0;
         width: 100%;
         height: 50px;
     }
     .previewBubble-wrapper{
+        position: initial;
+        flex: 1;
         padding: 5px 5px 0 0;
         justify-content: flex-start;
-        // width: calc(100% - 195px);
         height: 100%;
     }
     .previewBubble{
@@ -1134,9 +1139,7 @@ font-family: 'Times New Roman', Times, serif;
     }
     .TagsMenu-hamburger{
         height: 100% !important;
-        // width: 90px;
-        width: 100%;
-        // background-color: black;
+        width: 100px;
         cursor: pointer;
         display: flex;
         justify-content: center;
@@ -1148,8 +1151,6 @@ font-family: 'Times New Roman', Times, serif;
     }
     .TagsMenu-hamburger *{
         padding: 0 !important;
-        // transform-origin: center;
-        // transform: scaleY(2);
         color: black !important;
     }
     .info-up{
@@ -1255,6 +1256,7 @@ font-family: 'Times New Roman', Times, serif;
         overflow-y: hidden;
     }
     .enlargeContainer{
+        background-color: white !important;
         grid-column-start: 1;
         grid-column-end: 2;
         grid-row-start: 1;
@@ -1266,23 +1268,16 @@ font-family: 'Times New Roman', Times, serif;
         justify-content: center;
         transform: translateY(-100%);
         z-index: 999;
-        // background-color: white;
         background-color: rgba(0,0,0,0);
         border-top: none;
         border-bottom: none;
         z-index:1;
-        position: absolute;
         grid-row-start: 1;
         grid-row-end: 2;
         border-left: none;
-        // height: 0px;
         overflow: visible;
         transition: 0.2s height, 0.2s width, 0.2s transform, 0.2s opacity;
     }
-    // // .enlargeContainer > div {
-    // //     height: auto;
-    // //     max-width: 100%;
-    // // }
     #foreground, #background{
         max-height: 100%;
         height: auto;
@@ -1353,7 +1348,6 @@ font-family: 'Times New Roman', Times, serif;
     .imageSelect-FilePreview{
         align-self: flex-start;
         object-position: bottom left;
-        height: 100%;
         width: auto;
         max-width: 100%;
     }
@@ -1376,13 +1370,12 @@ font-family: 'Times New Roman', Times, serif;
     .image-hide{
         display: none;
     }
-    .ImagesPreview--imageContainer{
-        // width: 50%;
-        min-height: 90px;
+    .FilePreview--imageContainer{
         flex: 1 1 50%;
-        // border: 1px solid red;
     }
-    .ImagesPreview--imageContainer__empty{
+    .FilePreview--imageContainer__empty{
+        height: 0 !important;
+        width: 0 !important;
         min-height: 0 !important;
     }
     .ArtworkInfo--descriptions{
@@ -1391,7 +1384,7 @@ font-family: 'Times New Roman', Times, serif;
     .ArtworkInfo_locationYear{
         font-size: 10px;
     }
-    .side-scroll .ImagesPreview--imageContainer__empty{
+    .side-scroll .FilePreview--imageContainer__empty{
         width: 0px !important;
         height: 100% !important;
         min-width: 0 !important;
@@ -1408,14 +1401,11 @@ font-family: 'Times New Roman', Times, serif;
     .side-scroll img{
         height: 90px;
     }
-
-    // .side-scroll-min{
-    //     border: 1px solid red;
-    // }
-    .side-scroll .ImagesPreview--imageContainer{
+    .side-scroll .FilePreview--imageContainer{
         width: initial;
         left: initial;
         min-width: initial;
+        flex: 1 1 100%;
     }
     .hide-imageSelect{
         transform: translateY(100%)
