--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -404,6 +404,13 @@
   background-color: #b3b3b3;
 }
 
+.list-group-item {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  padding: 0 !important;
+}
+
 .list--listitem {
   background-color: #d3d3d3;
   font-size: 12px;
@@ -411,12 +418,7 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-}
-
-.list-group-item {
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
+  padding-left: 5px !important;
 }
 
 .categories-input {
@@ -530,7 +532,7 @@ body {
 }
 
 ul {
-  padding: 15px 7px;
+  padding: 15px 7px 0 7px;
   margin: 0;
   white-space: nowrap;
 }
