--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -37,7 +37,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 ul{
-    padding: 15px 7px;
+    padding: 15px 7px 0 7px;
     margin: 0; 
     white-space: nowrap;
 }
